--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,32 +10,34 @@ spring:
     url: jdbc:mysql://localhost:3306/cloud_music?useUnicode=true&characterEncoding=utf-8&relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
     username: root
     password: tyinzero
-#    druid:
-#      # 初始连接数
-#      initialSize: 5
-#      # 最小连接池数量
-#      minIdle: 10
-#      # 最大连接池数量
-#      maxActive: 20
-#      # 配置获取连接等待超时的时间
-#      maxWait: 60000
-#      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-#      timeBetweenEvictionRunsMillis: 60000
-#      # 配置一个连接在池中最小生存的时间，单位是毫秒
-#      minEvictableIdleTimeMillis: 300000
-#      # 配置一个连接在池中最大生存的时间，单位是毫秒
-#      maxEvictableIdleTimeMillis: 900000
+  #    druid:
+  #      # 初始连接数
+  #      initialSize: 5
+  #      # 最小连接池数量
+  #      minIdle: 10
+  #      # 最大连接池数量
+  #      maxActive: 20
+  #      # 配置获取连接等待超时的时间
+  #      maxWait: 60000
+  #      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+  #      timeBetweenEvictionRunsMillis: 60000
+  #      # 配置一个连接在池中最小生存的时间，单位是毫秒
+  #      minEvictableIdleTimeMillis: 300000
+  #      # 配置一个连接在池中最大生存的时间，单位是毫秒
+  #      maxEvictableIdleTimeMillis: 900000
   redis:
     host: localhost
     port: 6379
     password: tyinzero
   jackson:
     default-property-inclusion: NON_NULL
+    time-zone: GMT+8
 #  mvc:
 #    pathmatch:
 #      matching-strategy: ant_path_matcher
 mybatis-plus:
   configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     log-impl: com.tyin.cloud.core.configs.mybatis.logs.CloudMyBatisLog
 
 cloud:
@@ -43,4 +45,6 @@ cloud:
     prefix:
       admin: /admin
       client: /client
-
+logging:
+  level:
+    com.tyin: debug
