--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
         <commons-codec.version>1.13</commons-codec.version>
         <commons-io.version>2.6</commons-io.version>
         <guava.version>27.0.1-android</guava.version>
-        <validation.version>2.0.0.Final</validation.version>
-        <hibernate.version>5.4.1.Final</hibernate.version>
+        <validation.version>8.0.0.Alpha2</validation.version>
         <log4j.version>2.17.0</log4j.version>
         <druid.version>1.2.8</druid.version>
         <oshi.version>6.1.5</oshi.version>
@@ -92,6 +91,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
 
@@ -148,6 +151,11 @@
                 <groupId>com.github.oshi</groupId>
                 <artifactId>oshi-core</artifactId>
                 <version>${oshi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate.validator</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>${validation.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
