--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     #    指定数据源的类型
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cloud_music?useUnicode=true&characterEncoding=utf-8&relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://rds.ubuntu.wsl:3306/cloud_music?useUnicode=true&characterEncoding=utf-8&relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
     username: root
     password: tyinzero
   #    druid:
@@ -26,7 +26,7 @@ spring:
   #      # 配置一个连接在池中最大生存的时间，单位是毫秒
   #      maxEvictableIdleTimeMillis: 900000
   redis:
-    host: localhost
+    host: redis.ubuntu.wsl
     port: 6379
     password: tyinzero
   jackson:
@@ -41,6 +41,8 @@ mybatis-plus:
     log-impl: com.tyin.cloud.core.configs.mybatis.logs.CloudMyBatisLog
 
 cloud:
+  oss:
+    url: http://files.ubuntu.wsl/files/images
   api:
     prefix:
       admin: /admin
