UserSession, 日志查询相关不记录接口日志

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,7 @@ spring:
     host: redis.tyin.vip
     port: 6379
     password: tyinzero
+    connect-timeout: 3000
   jackson:
     default-property-inclusion: NON_NULL
     time-zone: GMT+8
