--- a/cloud-music-client/src/main/resources/application-dev.yml
+++ b/cloud-music-client/src/main/resources/application-dev.yml
@@ -3,3 +3,18 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://rds.tyin.vip:3306/cloud_music?useUnicode=true&characterEncoding=utf-8&relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+logging:
+  file:
+    name: /data/logs/client/cloud-music.log
+  logback:
+    rollingpolicy:
+      max-file-size: 500MB
+      max-history: 20
+      file-name-pattern: /data/logs/client/cloud-music.%d{yyyy-MM-dd}.%i.log
+# ===== 自定义swagger配置 ===== #
+swagger:
+  enable: true
+  application-name: ${spring.application.name}
+  application-version: 1.0
+  application-description: CloudMusicAdminAPI
+  try-host: http://localhost:${server.port}
