--- a/cloud-music-core/src/main/resources/application-core.yml
+++ b/cloud-music-core/src/main/resources/application-core.yml
@@ -13,14 +13,16 @@ spring:
   application:
     name: cloud_music_server
   datasource:
+
     #    指定数据源的类型
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: tyinzero
     filters: stat
-    use-global-data-source-stat: true
-    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+    druid:
+      use-global-data-source-stat: true
+      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
     #      # 初始连接数
     #      initialSize: 5
     #      # 最小连接池数量
@@ -39,12 +41,6 @@ spring:
     host: redis.tyin.vip
     port: 6379
     password: tyinzero
-    jedis:
-      pool:
-        max-active: 30
-        max-wait: 200
-        min-idle: 10
-        max-idle: 30
   jackson:
     default-property-inclusion: NON_NULL
     time-zone: GMT+8
@@ -57,7 +53,7 @@ spring:
 mybatis-plus:
   configuration:
     #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    log-impl: com.tyin.core.config.mybatis.logs.CloudMyBatisLog
+    log-impl: com.tyin.core.config.database.mybatis.logs.CloudMyBatisLog
 logging:
   level:
     com.tyin: debug
