--- a/cloud-music-core/src/main/resources/application-core.yml
+++ b/cloud-music-core/src/main/resources/application-core.yml
@@ -41,6 +41,12 @@ spring:
     host: redis.tyin.vip
     port: 6379
     password: tyinzero
+    jedis:
+      pool:
+        max-active: 20
+        max-wait: 1
+        max-idle: -1
+        min-idle: 0
   jackson:
     default-property-inclusion: NON_NULL
     time-zone: GMT+8
