--- a/cloud-music-core/src/main/resources/application-core.yml
+++ b/cloud-music-core/src/main/resources/application-core.yml
@@ -9,44 +9,44 @@ cloud:
     prefix:
       admin: /admin
       client: /client
+      app: /app
+  swagger:
+    enable: true
+    application-name: ${spring.application.name}
+    application-version: 1.0
+    application-description: API文档
+    try-host: http://localhost:${server.port}
 spring:
   application:
     name: cloud_music_server
   datasource:
-
     #    指定数据源的类型
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: tyinzero
-    filters: stat
     druid:
-      use-global-data-source-stat: true
-      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
-    #      # 初始连接数
-    #      initialSize: 5
-    #      # 最小连接池数量
-    #      minIdle: 10
-    #      # 最大连接池数量
-    #      maxActive: 20
-    #      # 配置获取连接等待超时的时间
-    #      maxWait: 60000
-    #      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-    #      timeBetweenEvictionRunsMillis: 60000
-    #      # 配置一个连接在池中最小生存的时间，单位是毫秒
-    #      minEvictableIdleTimeMillis: 300000
-    #      # 配置一个连接在池中最大生存的时间，单位是毫秒
-    #      maxEvictableIdleTimeMillis: 900000
+      web-stat-filter:
+        enabled: true
+        url-pattern: /*
+      filter:
+        stat:
+          log-slow-sql: true
+          slow-sql-millis: 2000
+      stat-view-servlet:
+        url-pattern: /druid/*
+        login-username: tyin
+        login-password: 123456
+        allow:
+        enabled: true
+      max-wait: 60000
+      max-active: 20
+      initial-size: 5
+      min-idle: 10
+      time-between-eviction-runs-millis: 60000
+      min-evictable-idle-time-millis: 300000
+      max-evictable-idle-time-millis: 900000
+      filters: stat, wall
   redis:
-    host: redis.tyin.vip
-    port: 6379
-    password: tyinzero
-    jedis:
-      pool:
-        max-active: 20
-        max-wait: 1
-        max-idle: -1
-        min-idle: 0
+    timeout: 30000
   jackson:
     default-property-inclusion: NON_NULL
     time-zone: GMT+8
@@ -58,7 +58,6 @@ spring:
       max-request-size: 500MB
 mybatis-plus:
   configuration:
-    #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     log-impl: com.tyin.core.config.database.mybatis.logs.CloudMyBatisLog
 logging:
   level:
