--- a/cloud-music-server/pom.xml
+++ b/cloud-music-server/pom.xml
@@ -51,7 +51,19 @@
         <profile>
             <id>dev</id>
             <properties>
-                <spring.profiles.active>dev,core</spring.profiles.active>
+                <spring.profiles.active>core,core-dev,dev</spring.profiles.active>
+            </properties>
+        </profile>
+        <profile>
+            <id>local</id>
+            <properties>
+                <spring.profiles.active>core,core-local,local</spring.profiles.active>
+            </properties>
+        </profile>
+        <profile>
+            <id>product</id>
+            <properties>
+                <spring.profiles.active>core,core-product,product</spring.profiles.active>
             </properties>
         </profile>
     </profiles>
