--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <openapi.version>2.0.0-M2</openapi.version>
         <okhttp.version>4.9.3</okhttp.version>
         <quartz.version>2.3.2</quartz.version>
+        <jwt.version>0.9.1</jwt.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -51,6 +52,12 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>${swagger.version}</version>
+            </dependency>
+            <!--jwt-->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jwt.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
