--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <jackson.version>2.13.0-rc1</jackson.version>
         <swagger.version>3.0.0</swagger.version>
         <swagger.ui.version>3.0.2</swagger.ui.version>
-        <knife4j.ui.version>2.0.8</knife4j.ui.version>
+        <knife4j.ui.version>3.0.3</knife4j.ui.version>
         <commons-codec.version>1.13</commons-codec.version>
         <commons-io.version>2.7</commons-io.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
@@ -35,6 +35,7 @@
         <okhttp.version>4.9.3</okhttp.version>
         <quartz.version>2.3.2</quartz.version>
         <jwt.version>0.9.1</jwt.version>
+        <springdoc.version>1.6.11</springdoc.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -48,21 +49,31 @@
                 <artifactId>jackson-annotations</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>io.springfox</groupId>-->
+            <!--                <artifactId>springfox-boot-starter</artifactId>-->
+            <!--                <version>${swagger.version}</version>-->
+            <!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>com.github.xiaoymin</groupId>-->
+            <!--                <artifactId>knife4j-spring-ui</artifactId>-->
+            <!--                <version>${knife4j.ui.version}</version>-->
+            <!--            </dependency>-->
             <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-boot-starter</artifactId>
-                <version>${swagger.version}</version>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-ui</artifactId>
+                <version>${springdoc.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-springdoc-ui</artifactId>
+                <version>${knife4j.ui.version}</version>
             </dependency>
             <!--jwt-->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>${jwt.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.github.xiaoymin</groupId>
-                <artifactId>knife4j-spring-ui</artifactId>
-                <version>${knife4j.ui.version}</version>
             </dependency>
             <dependency>
                 <groupId>commons-codec</groupId>
