登录页修改; 日志详情;

--- a/cloud-music-server/pom.xml
+++ b/cloud-music-server/pom.xml
@@ -53,6 +53,10 @@
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.lionsoul</groupId>
+            <artifactId>ip2region</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
