--- a/cloud-music-core/src/main/resources/application-core.yml
+++ b/cloud-music-core/src/main/resources/application-core.yml
@@ -46,7 +46,13 @@ spring:
       max-evictable-idle-time-millis: 900000
       filters: stat, wall
   redis:
-    timeout: 30000
+    timeout: 5000ms
+    lettuce:
+      pool:
+        max-active: 500
+        min-idle: 5
+        max-idle: -1
+        max-wait: -1
   jackson:
     default-property-inclusion: NON_NULL
     time-zone: GMT+8
