--- a/cloud-music-core/src/main/resources/application-core-local.yml
+++ b/cloud-music-core/src/main/resources/application-core-local.yml
@@ -1,9 +1,17 @@
 spring:
   redis:
-    host: redis.tyin.vip
+    database: 10
+    host: r-2ze2y81rdeb8c1zgvnpd.redis.rds.aliyuncs.com
+    lettuce:
+      pool:
+        max-active: 8   #最大连接数据库连接数,设 -1 为没有限制
+        max-idle: 8     #最大等待连接中的数量,设 0 为没有限制
+        max-wait: -1ms  #最大建立连接等待时间。如果超过此时间将接到异常。设为-1表示无限制。
+        min-idle: 0     #最小等待连接中的数量,设 0 为没有限制
+      shutdown-timeout: 100ms
+    password: ShangBang123
     port: 6379
-    password: tyinzero
   datasource:
-    url: jdbc:mysql://rds.tyin.vip:3306/cloud_music?useUnicode=true&characterEncoding=utf-8&relaxAutoCommit=true&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-    username: root
-    password: tyinzero
+    url: jdbc:mysql://rm-2zet01y4xy871dk323o.mysql.rds.aliyuncs.com:3306/nft_dev?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+    username: java
+    password: ShangBang123
